# fusionintel-core

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  precommit.yml  smoke.yml
api/: main.py
audit_log/: __init__.py  audit.py
contracts/: __init__.py  schemas.py
delivery_action/: __init__.py  action.py
docs/: multitenancy-invariants.md  reference-architecture-paper.md  signing-and-key-management.md
fusionintel_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
orchestrator/: __init__.py  cli.py  pipeline.py
schemas/: fusionintel.policy-bundle.schema.json
scripts/: audit_smoke.ps1  bootstrap_enforce.ps1  bootstrap_optionA_policy_schema.ps1  run_tests.py  validate_placements.py
sovereignty_compliance/: __init__.py  policy.py
tests/: __init__.py  test_layer4_gate.py  test_layer5_delivery_action.py  test_layer6_audit_log.py  test_layer7_orchestrator.py  test_layer8_cli.py  test_layer9_api.py  test_validate_placements.py
