[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionintel-core"
version = "0.2.5"
description = "FusionIntel Core: Layer 4–9 sovereignty, delivery action, audit log, orchestrator, CLI, and API."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Pepsi M"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "httpx>=0.24",
]

[tool.setuptools]
packages = ["contracts", "sovereignty_compliance", "delivery_action", "audit_log", "orchestrator", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
